Bug 316332 - Next bullet works only for one iteration
Summary: Next bullet works only for one iteration
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 2.1.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 18:56 UTC by kiniswiss
Modified: 2013-03-07 21:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kiniswiss 2013-03-07 18:56:48 UTC
%C == where the cursor is

1. \newcommand{%C}[×][×]{×}
2. Next bullet action
3. \newcommand{}[%Cx][×]{×}
4. Next bullet action
5. \newcommand{}[%Cx][×]{×}

Prev Bullet action works properly 
1. \newcommand{}[×][×]{%C×}
2. Prev bullet action
3. \newcommand{}[x][%C×]{×}
4. Prev bullet action
5. \newcommand{}[%Cx][×]{×}

Reproducible: Always

Steps to Reproduce:
Use command completion to obtain command with bullets.

1. \newcommand{%C}[×][×]{×}
2. Next bullet action
3. Next bullet action
Actual Results:  
\newcommand{}[%Cx][×]{×}

Expected Results:  
\newcommand{}[x][%C×]{×}

$ kile -v
Qt: 4.8.1
KDE Development Platform: 4.8.5 (4.8.5)
Kile: 2.1.3
Comment 1 Michel Ludwig 2013-03-07 21:40:29 UTC
Git commit 7b8e0a384c886be7fbd4f353f8f9fdb37fc83185 by Michel Ludwig.
Committed on 07/03/2013 at 22:35.
Pushed by mludwig into branch '2.1'.

Fix the move-to-next-bullet action

If the cursor is positioned at a bullet and the move-to-next-bullet action is
triggered, the cursor will jump to the next bullet if the current bullet hasn't
been 'highlighted' yet.

M  +10   -10   src/editorextension.cpp

http://commits.kde.org/kile/7b8e0a384c886be7fbd4f353f8f9fdb37fc83185
Comment 2 Michel Ludwig 2013-03-07 21:42:58 UTC
Git commit bfd6ba4ac70eb7f89a7dc826a09344e5f8b6489c by Michel Ludwig.
Committed on 07/03/2013 at 22:35.
Pushed by mludwig into branch 'master'.

Fix the move-to-next-bullet action

If the cursor is positioned at a bullet and the move-to-next-bullet action is
triggered, the cursor will jump to the next bullet if the current bullet hasn't
been 'highlighted' yet.

M  +9    -7    src/editorextension.cpp

http://commits.kde.org/kile/bfd6ba4ac70eb7f89a7dc826a09344e5f8b6489c