Fix the move-to-next-bullet action

If the cursor is positioned at a bullet and the move-to-next-bullet action is
triggered, the cursor will jump to the next bullet if the current bullet hasn't
been 'highlighted' yet.

BUG: 316332